modules/vpc/main.tf
# Creating the VPC
resource "aws_vpc" "this" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = var.vpc_name
  }
}

# Internet Gateway
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id

  tags = {
    Name = "${var.vpc_name}-igw"
  }
}

# Public Subnets
resource "aws_subnet" "public_1" {
  vpc_id            = aws_vpc.this.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "${var.region}a"

  map_public_ip_on_launch = true

  tags = {
    Name = "${var.vpc_name}-public-1"
  }
}

# resource "aws_subnet" "public_2" {
#   vpc_id            = aws_vpc.this.id
#   cidr_block        = "10.0.2.0/24"
#   availability_zone = "${var.region}b"

#   map_public_ip_on_launch = true

#   tags = {
#     Name = "${var.vpc_name}-public-2"
#   }
# }

# # Private Subnets
# resource "aws_subnet" "private_1" {
#   vpc_id            = aws_vpc.this.id
#   cidr_block        = "10.0.10.0/24"
#   availability_zone = "${var.region}a"

#   tags = {
#     Name = "${var.vpc_name}-private-1"
#   }
# }

# resource "aws_subnet" "private_2" {
#   vpc_id            = aws_vpc.this.id
#   cidr_block        = "10.0.11.0/24"
#   availability_zone = "${var.region}b"

#   tags = {
#     Name = "${var.vpc_name}-private-2"
#   }
# }

# Public Route Table
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.this.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.this.id
  }

  tags = {
    Name = "${var.vpc_name}-public-rt"
  }
}

# # Private Route Table
# resource "aws_route_table" "private" {
#   vpc_id = aws_vpc.this.id

#   tags = {
#     Name = "${var.vpc_name}-private-rt"
#   }
# }

# Route Table Associations - Public
resource "aws_route_table_association" "public_1" {
  subnet_id      = aws_subnet.public_1.id
  route_table_id = aws_route_table.public.id
}

# resource "aws_route_table_association" "public_2" {
#   subnet_id      = aws_subnet.public_2.id
#   route_table_id = aws_route_table.public.id
# }

# # Route Table Associations - Private
# resource "aws_route_table_association" "private_1" {
#   subnet_id      = aws_subnet.private_1.id
#   route_table_id = aws_route_table.private.id
# }

# resource "aws_route_table_association" "private_2" {
#   subnet_id      = aws_subnet.private_2.id
#   route_table_id = aws_route_table.private.id
# }
